<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <POU Name="TEST_UNIT_VIRTUAL" Id="{def1cb56-2e92-494b-9c8e-90184f6eb8a7}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM TEST_UNIT_VIRTUAL
VAR
	fbParent : RunUnitGeneric(ptBlock:= ADR(GVL.LOCAL_UNIT_CONTEXTS[1]));
	fbChild : RunUnitGeneric(ptBlock:= ADR(GVL.LOCAL_UNIT_CONTEXTS[2]));
	
	ptBlock : POINTER TO UnitBase := ADR(GVL.LOCAL_UNIT_CONTEXTS[2]);
	
	testCondition : bool ;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//the virtual station and coding example
fbParent(state=> );
fbChild(state=> );
//---------------------------

CASE fbChild.state OF
	0:
	// do next state
	ptBlock^.serialTransition := testCondition;
	1:
	//when transition condition meets , do next state
	IF ptBlock^.transitionByte = 16#3 THEN
		ptBlock^.serialTransition := TRUE;
	END_IF
	2..10:
		//try step mode
		ptBlock^.serialTransition :=TRUE;
	11:
	//direct set next state
	ptBlock^.nextState := 0;
	
	
END_CASE]]></ST>
    </Implementation>
    <LineIds Name="TEST_UNIT_VIRTUAL">
      <LineId Id="8" Count="2" />
      <LineId Id="12" Count="2" />
      <LineId Id="33" Count="0" />
      <LineId Id="23" Count="0" />
      <LineId Id="18" Count="0" />
      <LineId Id="32" Count="0" />
      <LineId Id="26" Count="2" />
      <LineId Id="19" Count="0" />
      <LineId Id="40" Count="0" />
      <LineId Id="39" Count="0" />
      <LineId Id="38" Count="0" />
      <LineId Id="31" Count="0" />
      <LineId Id="30" Count="0" />
      <LineId Id="34" Count="1" />
      <LineId Id="15" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>